dark mode lag fixed

--- a/index.css
+++ b/index.css
@@ -224,12 +224,12 @@ html {
 body{
     background-color: white;
     color: black;
-    transition: 0.5s ease-out;
+    /* transition: 0.5s ease-out; */
 }
 .dark-mode {
     background-color: #2c2c2f;
     color: white;
-    transition: 0.5s ease-out;
+    /* transition: 0.5s ease-out; */
 }
 .dark-mode .news-container{
     background-color: white;
@@ -258,50 +258,7 @@ body{
     z-index: 99;
     font-weight: bold;   
 }
-/* SNACKBAR */
-#snackbar {
-    visibility: hidden;
-    background-color: #333;
-    color: #fff;
-    text-align: left;
-    border-radius: 2px;
-    padding: 16px;
-    position: fixed;
-    min-width: 250px;
-    margin-left: 5%;
-    margin-right: 5%;
-    z-index: 1;
-    /* right: 10%; */
-    bottom: 70px;
-    font-size: 17px;
-    overflow-wrap: break-word;
-  }
-  
-  #snackbar.show {
-    visibility: visible;
-    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
-    animation: fadein 0.5s, fadeout 0.5s 2.5s;
-  }
-  
-  @-webkit-keyframes fadein {
-    from {bottom: 0; opacity: 0;} 
-    to {bottom: 70px; opacity: 1;}
-  }
-  
-  @keyframes fadein {
-    from {bottom: 0; opacity: 0;}
-    to {bottom: 70px; opacity: 1;}
-  }
-  
-  @-webkit-keyframes fadeout {
-    from {bottom: 70px; opacity: 1;} 
-    to {bottom: 0; opacity: 0;}
-  }
-  
-@keyframes fadeout {
-    from {bottom: 70px; opacity: 1;}
-    to {bottom: 0; opacity: 0;}
-}
+
 .footer h4 button{
     background-color: #242424;
     color: white;
